--- a/app/src/main/res/layout/fragment_add_task.xml
+++ b/app/src/main/res/layout/fragment_add_task.xml
@@ -1,31 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
-    <data>
-
-        <import type="android.view.View" />
-
-        <variable
-            name="viewmodel"
-            type="com.yandex.todo.ui.addtask.AddEditTaskViewModel" />
-    </data>
-
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
+    <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="wrap_content">
 
-        <FrameLayout
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/appbar"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+
+            android:layout_height="wrap_content"
+            android:fitsSystemWindows="true">
 
             <ImageView
                 android:id="@+id/close_btn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="12dp"
-                android:layout_marginTop="12dp"
+                android:layout_gravity="center_vertical"
+                android:layout_marginStart="@dimen/activity_padding_horizontal"
+                android:layout_marginTop="@dimen/activity_padding_horizontal"
                 android:src="@drawable/ic_close" />
 
             <TextView
@@ -33,101 +30,111 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="end"
-                android:layout_marginTop="12dp"
-                android:layout_marginEnd="12dp"
+                android:layout_marginEnd="@dimen/activity_padding_horizontal"
                 android:text="@string/save" />
 
-        </FrameLayout>
+        </androidx.appcompat.widget.Toolbar>
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/edit_text"
-            android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:layout_centerHorizontal="true"
-            android:layout_marginStart="12dp"
-            android:layout_marginTop="20dp"
-            android:text="@={viewmodel.title}"
-            android:layout_marginEnd="12dp"
-            android:background="@drawable/background_edit_text"
-            android:gravity="top"
-            android:hint="@string/task_hint"
-            android:imeOptions="actionDone"
-            android:importantForAutofill="no"
-            android:inputType="textMultiLine|textCapSentences"
-            android:maxLines="5"
-            android:minLines="2"
-            android:paddingStart="12dp"
-            android:paddingTop="8dp"
-            android:paddingEnd="0dp"
-            android:paddingBottom="8dp"
-            android:textSize="16sp" />
+    </com.google.android.material.appbar.AppBarLayout>
 
-        <TextView
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:clipToPadding="false"
+        android:paddingBottom="@dimen/activity_padding_vertical">
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="12dp"
-            android:layout_marginTop="12dp"
-            android:text="@string/priority" />
+            android:orientation="vertical">
 
-        <androidx.appcompat.widget.AppCompatSpinner
-            android:id="@+id/spinner"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@null"
-            tools:listitem="@layout/piority_type_row" />
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="0.5dp"
-            android:layout_marginStart="12dp"
-            android:layout_marginTop="12dp"
-            android:layout_marginEnd="20dp"
-            android:background="#30000000" />
-
-        <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="12dp">
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/edit_text"
+                android:layout_width="match_parent"
+                android:layout_height="100dp"
+                android:layout_marginStart="@dimen/activity_padding_horizontal"
+                android:layout_marginTop="@dimen/activity_padding_vertical"
+                android:layout_marginEnd="@dimen/activity_padding_horizontal"
+                android:background="@drawable/background_edit_text"
+                android:gravity="top"
+                android:hint="@string/task_hint"
+                android:imeOptions="actionDone"
+                android:importantForAutofill="no"
+                android:inputType="textMultiLine|textCapSentences"
+                android:maxLines="5"
+                android:paddingStart="@dimen/activity_padding_horizontal"
+                android:paddingTop="@dimen/edit_text_padding_vertical"
+                android:paddingEnd="@dimen/activity_padding_horizontal"
+                android:paddingBottom="@dimen/edit_text_padding_horizontal"
+                android:textSize="16sp" />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="12dp"
-                android:text="@string/create_before" />
+                android:layout_marginStart="@dimen/activity_padding_horizontal"
+                android:layout_marginTop="@dimen/activity_padding_horizontal"
+                android:text="@string/priority" />
 
-            <androidx.appcompat.widget.SwitchCompat
-                android:id="@+id/switcher"
+            <androidx.appcompat.widget.AppCompatSpinner
+                android:id="@+id/spinner"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@null"
+                tools:listitem="@layout/priority_type_row" />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="0.5dp"
+                android:layout_marginStart="@dimen/activity_padding_horizontal"
+                android:layout_marginEnd="@dimen/activity_padding_horizontal"
+                android:background="@color/light_gray" />
+
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/activity_padding_horizontal">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/activity_padding_horizontal"
+                    android:text="@string/create_before" />
+
+                <androidx.appcompat.widget.SwitchCompat
+                    android:id="@+id/switcher"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="end"
+                    android:layout_marginEnd="@dimen/padd_10" />
+
+            </FrameLayout>
+
+            <TextView
+                android:id="@+id/text_deadline"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:onClick="@{() -> viewmodel.saveTask()}"
-                android:layout_gravity="end"
-                android:layout_marginEnd="@dimen/padd_10" />
+                android:layout_marginStart="@dimen/activity_padding_horizontal"
+                tools:text="пт, 23 сен 1997" />
 
-        </FrameLayout>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="0.5dp"
+                android:layout_marginTop="@dimen/activity_padding_horizontal"
+                android:background="@color/light_gray" />
 
-        <TextView
-            android:id="@+id/text_deadline"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="12dp"
-            tools:text="27.06.2021" />
+            <TextView
+                android:id="@+id/delete_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/activity_padding_horizontal"
+                android:layout_marginTop="@dimen/activity_padding_horizontal"
+                android:drawableStart="@drawable/ic_delete_gray"
+                android:drawablePadding="@dimen/padd_10"
+                android:gravity="center_vertical"
+                android:text="@string/delete" />
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="0.5dp"
-            android:layout_marginTop="12dp"
-            android:background="#30000000" />
+        </LinearLayout>
 
-        <TextView
-            android:id="@+id/delete_btn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="12dp"
-            android:layout_marginTop="12dp"
-            android:drawableStart="@drawable/ic_delete_gray"
-            android:drawablePadding="@dimen/padd_10"
-            android:gravity="center_vertical"
-            android:text="@string/delete" />
+    </ScrollView>
 
-    </LinearLayout>
-</layout>
+</LinearLayout>
