--- a/app/src/main/res/layout/item_task.xml
+++ b/app/src/main/res/layout/item_task.xml
@@ -1,88 +1,69 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:id="@+id/item_layout"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
 
-    <data>
+    <RelativeLayout
+        android:id="@+id/view_background"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/red_delete">
 
-        <import type="android.widget.CompoundButton" />
+        <ImageView
+            android:id="@+id/delete_icon"
+            android:layout_width="@dimen/ic_delete"
+            android:layout_height="@dimen/ic_delete"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+            android:layout_marginEnd="@dimen/padd_10"
+            android:src="@drawable/ic_delete" />
 
-        <variable
-            name="task"
-            type="com.yandex.todo.data.api.model.task.Task" />
+    </RelativeLayout>
 
-        <variable
-            name="viewmodel"
-            type="com.yandex.todo.ui.home.HomeViewModel" />
-    </data>
-
-    <FrameLayout
-        android:id="@+id/item_layout"
+    <RelativeLayout
+        android:id="@+id/view_foreground"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:onClick="@{() -> viewmodel.openTask(task.id)}">
+        android:background="@android:color/white"
+        android:padding="@dimen/activity_padding_horizontal">
 
-        <RelativeLayout
-            android:id="@+id/view_background"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@color/bg_row_background">
-
-            <ImageView
-                android:id="@+id/delete_icon"
-                android:layout_width="@dimen/ic_delete"
-                android:layout_height="@dimen/ic_delete"
-                android:layout_alignParentEnd="true"
-                android:layout_centerVertical="true"
-                android:layout_marginEnd="@dimen/padd_10"
-                android:src="@drawable/ic_delete" />
-
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:id="@+id/view_foreground"
-            android:layout_width="match_parent"
+        <CheckBox
+            android:id="@+id/checkbox"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@android:color/white"
-            android:padding="12dp">
+            android:layout_centerVertical="true"
+            android:padding="@dimen/padd_10" />
 
-            <CheckBox
-                android:id="@+id/checkbox"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:onClick="@{(view) -> viewmodel.completeTask(task, ((CompoundButton)view).isChecked())}"
-                android:checked="@{task.done}"
-                android:layout_centerVertical="true" />
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginEnd="8dp"
+            android:layout_alignParentEnd="true"
+            android:layout_toEndOf="@id/checkbox"
+            android:orientation="vertical">
 
             <TextView
-                android:id="@+id/name"
+                android:id="@+id/content_text_view"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_marginStart="8dp"
-                android:layout_marginEnd="8dp"
-                android:layout_toStartOf="@id/info"
-                android:layout_toEndOf="@id/checkbox"
+                android:drawablePadding="@dimen/padd_10"
                 android:ellipsize="end"
                 android:fontFamily="sans-serif-medium"
                 android:maxLines="3"
-                android:text="@{task.text}"
-                app:completedTask="@{task.done}"
-                android:textColor="@color/item_name"
+                android:textColor="@color/main_text_color"
                 tools:text="Test" />
 
-            <ImageView
-                android:id="@+id/info"
+            <TextView
+                android:id="@+id/deadline_text_view"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:layout_centerVertical="true"
-                android:layout_marginEnd="8dp"
-                android:src="@drawable/ic_info"
-                android:textColor="@color/colorAccent"
-                android:textStyle="bold"
-                android:visibility="gone" />
+                android:textColor="@color/main_text_color"
+                android:layout_height="wrap_content" />
 
-        </RelativeLayout>
-    </FrameLayout>
-</layout>
+        </LinearLayout>
+
+    </RelativeLayout>
+
+</FrameLayout>
