--- a/app/src/main/res/layout/priority_type_row.xml
+++ b/app/src/main/res/layout/priority_type_row.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:padding="16dp"
-    android:textSize="16sp"
+    android:padding="@dimen/activity_padding_horizontal"
+    android:textSize="@dimen/text_size"
     tools:text="Нет" />
