--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,7 +2,14 @@
 <resources>
 
     <dimen name="activity_padding_horizontal">16dp</dimen>
+    <dimen name="activity_padding_vertical">20dp</dimen>
+    <dimen name="edit_text_padding_horizontal">16dp</dimen>
+    <dimen name="edit_text_padding_vertical">8dp</dimen>
+    <dimen name="icons_padding">12dp</dimen>
     <dimen name="padd_10">10dp</dimen>
+    <dimen name="expand_margin_start">20dp</dimen>
     <dimen name="ic_delete">30dp</dimen>
     <dimen name="thumbnail">90dp</dimen>
+
+    <dimen name="text_size">16sp</dimen>
 </resources>
